# CerebrumLux

./: .gitignore  CMakeLists.txt  CerebrumLux.rar  CerebrumLux_Full_Codebase.txt  README.md  vcpkg.json
assets/: info.md
src/: hnswlib_wrapper.cpp  hnswlib_wrapper.h  main.cpp
src/ai_tutor/: CMakeLists.txt  aitutor_loop.cpp  aitutor_loop.h  curriculum.cpp  curriculum.h  enums.h  llama_adapter.cpp  llama_adapter.h  student_ai.cpp  student_ai.h  student_level_evaluator.cpp  student_level_evaluator.h  teacher_ai.cpp  teacher_ai.h  teacher_evaluator.cpp  teacher_evaluator.h  tutor_broker_adapter.cpp  tutor_broker_adapter.h  tutor_broker_router.cpp  tutor_broker_router.h  tutor_engine.cpp  tutor_engine.h  tutor_gui_bridge.cpp  tutor_gui_bridge.h
src/brain/: IntentLearnerQtBridge.cpp  IntentLearnerQtBridge.h  IntentSignal.h  autoencoder.cpp  autoencoder.h  cryptofig_processor.cpp  cryptofig_processor.h  intent_analyzer.cpp  intent_analyzer.h  intent_learner.cpp  intent_learner.h  intent_template.cpp  intent_template.h  llama_worker.cpp  llama_worker.h  llm_engine.cpp  llm_engine.h  prediction_engine.cpp  prediction_engine.h
src/communication/: ai_insights_engine.cpp  ai_insights_engine.h  fasttext_wrapper.cpp  fasttext_wrapper.h  intent_router.cpp  intent_router.h  llama_invoker.cpp  llama_invoker.h  natural_language_processor.cpp  natural_language_processor.h  response_engine.cpp  response_engine.h  suggestion_engine.cpp  suggestion_engine.h
src/core/: CodeAnalyzerUtils.cpp  CodeAnalyzerUtils.h  CoreEventBus.cpp  CoreEventBus.h  enums.h  logger.cpp  logger.h  utils.cpp  utils.h
src/crypto/: CryptoManager.cpp  CryptoManager.h  CryptoUtils.cpp  CryptoUtils.h
src/data_models/: dynamic_sequence.cpp  dynamic_sequence.h  sequence_manager.cpp  sequence_manager.h
src/gui/: DataTypes.h  EngineIntegration.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  console_stream.h  engine_integration.cpp  engine_integration.h  qtextedit_stream_buf.cpp  qtextedit_stream_buf.h
src/gui/panels/: CapsuleTransferPanel.cpp  CapsuleTransferPanel.h  ChatPanel.cpp  ChatPanel.h  CurriculumPanel.cpp  CurriculumPanel.h  GraphPanel.cpp  GraphPanel.h  KnowledgeBasePanel.cpp  KnowledgeBasePanel.h  KnowledgeBaseWorker.cpp  KnowledgeBaseWorker.h  LogPanel.cpp  LogPanel.h  QTablePanel.cpp  QTablePanel.h  QTableWorker.cpp  QTableWorker.h  SimulationPanel.cpp  SimulationPanel.h  TrainingHubPanel.cpp  TrainingHubPanel.h  TutorPanel.cpp  TutorPanel.h  TutorWorker.cpp  TutorWorker.h
src/learning/: BehaviorProfile.h  Capsule.h  KnowledgeBase.cpp  KnowledgeBase.h  LearningModule.cpp  LearningModule.h  LearningState.h  LearningStore.cpp  LearningStore.h  StegoDetector.cpp  StegoDetector.h  StrategyOutcome.h  UnicodeSanitizer.cpp  UnicodeSanitizer.h  WebFetcher.cpp  WebFetcher.h  ai_tutor_loop.cpp  ai_tutor_loop.h  ai_tutor_loop_speech.cpp  web_page_parser.cpp  web_page_parser.h  web_search_result.h
src/meta/: meta_evolution_engine.cpp  meta_evolution_engine.h  meta_evolution_engine_sim.cpp
src/planning_execution/: goal_manager.cpp  goal_manager.h  planner.cpp  planner.h
src/sensors/: atomic_signal.cpp  atomic_signal.h  signal_processor.h  simulated_processor.cpp  simulated_processor.h
src/swarm_vectordb/: DataModels.h  SparseMatrix.cpp  SparseMatrix.h  VectorDB.cpp  VectorDB.h
src/tools/: KnowledgeImporter.cpp  nlp_online_trainer.cpp
src/user/: user_profile_manager.cpp  user_profile_manager.h
tests/: test_conversation_learning.cpp  test_learning_module.cpp  test_response_engine.cpp
